testing admin register
